# sam_parity

./: .gitignore  Cargo.toml  README.md
.github/workflows/: nightly-video-parity.yml  python.yml  rust-ci.yml
docs/: MIGRATION_INVENTORY.md  PARITY_CHECKLIST.md  SAM3_PARITY_SUPPORT_ACCESSOR_PLAN.md  STRICT_PORT_STEP2_8_COVERAGE.md  VIDEO_TRACKER_STRICT_PORT.md  video_postprocess_unconfirmed_box_debug_scenario.json  video_tracker_strict_port_matrix.json
examples/sam3/: batch_manifest.example.json  interactive_replay.example.json  setup_sam3_env.sh
python/: conftest.py  pyproject.toml
python/python_debug/: analyze_rope.py  check_coordinates.py  debug_grid_sample.py  export_decoder_unit_fixture.py  export_geometry_unit_fixture.py  export_segmentation_unit_fixture.py  geom_minimal_debug.py  pos_enc_debug.py  pos_enc_manual_debug.py  verify_bilinear.py
python/python_debug/sam3/: __init__.py  common.py
python/python_debug/sam3/exports/: export_fusion_unit_fixture.py  export_interactive_geometry_fixture.py  export_interactive_reference.py  export_interactive_visual_fixture.py
python/python_debug/sam3_debug/: common.py
python/python_debug/sam3_debug/exports/: export_fusion_unit_fixture.py  export_interactive_geometry_fixture.py  export_interactive_reference.py  export_interactive_visual_fixture.py
python/python_debug/sam3_debug/tests/: test_fusion_unit_fixture.py  test_interactive_geometry_fixture.py  test_interactive_stage_reference.py  test_interactive_visual_fixture.py  test_segmentation_unit_fixture.py
python/sam3_parity/: __init__.py  export_reference.py  generate_video_tracker_strict_port_matrix.py  paths.py  upstream.py  validate_bundles.py
python/sam3_parity/tests/: test_contract_files.py
rust/sam3-parity-cli/: Cargo.toml
rust/sam3-parity-cli/src/: comparison.rs  full_parity.rs  full_parity_support.rs  interactive.rs  interactive_compare.rs  main.rs  parity.rs  paths.rs  tracker_parity.rs  tracker_parity_harness.rs  tracker_parity_support.rs  video.rs  video_parity.rs  video_parity_harness.rs  video_parity_support.rs
rust/sam3-parity-lib/: Cargo.toml
rust/sam3-parity-lib/src/: comparison.rs  contracts.rs  lib.rs
rust/sam3-parity-lib/tests/: contracts.rs
tests/data/sam3_video_notebook_0001_first30/: README.md
