[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam3-parity"
version = "0.1.0"
description = "SAM3 parity exporters, matrix generators, and validation helpers"
requires-python = ">=3.11"
dependencies = [
    "Pillow",
    "pytest",
    "safetensors",
    "setuptools<81",
    "torch",
    "torchvision",
]

[project.optional-dependencies]
upstream = [
    "sam3 @ git+https://github.com/facebookresearch/sam3.git",
]

[project.scripts]
sam3-export-reference = "sam3_parity.export_reference:main"
sam3-generate-video-matrix = "sam3_parity.generate_video_tracker_strict_port_matrix:main"
sam3-validate-bundles = "sam3_parity.validate_bundles:main"
sam3-describe-upstream = "sam3_parity.upstream:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["sam3_parity*", "python_debug*"]

[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib"
markers = [
    "full_parity: tests that require upstream SAM3, checkpoint files, and generated parity fixtures",
]
