[package]
name = "sam3-parity-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
anyhow = "1"
candle = { path = "../../../candle_sam3/candle-core", package = "candle-core" }
candle-examples = { path = "../../../candle_sam3/candle-examples" }
candle-nn = { path = "../../../candle_sam3/candle-nn" }
candle-transformers = { path = "../../../candle_sam3/candle-transformers", features = ["sam3-parity-support"] }
clap = { version = "4.2.4", features = ["derive"] }
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.26.0", default-features = false, features = ["text"] }
intel-mkl-src = { version = "0.8.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.22.0", default-features = false, features = ["onig"] }

[features]
default = []
full-parity = []
accelerate = [
    "dep:accelerate-src",
    "candle/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
mkl = [
    "dep:intel-mkl-src",
    "candle/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl",
]
